Revert "fix: event form height and spacing"
This reverts commit 344d5b50b711b9be66d560de5409ffa699e85203.

--- a/src/components/ApplyForm/applyform.scss
+++ b/src/components/ApplyForm/applyform.scss
@@ -134,7 +134,7 @@
   }
 }
 @media screen and (min-width: 425px) {
-  .badge_form, .sub {
+  .badge_form {
     width: 80%;
   }
 }
@@ -145,6 +145,7 @@
     flex-direction: column;
     gap: 32px;
     height: auto;
+    min-height: 1000px;
     .input-wrapper {
       margin: 0;
       padding: 0;
